<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina6_12" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController" customModule="COESampleApp" customModuleProvider="target">
            <connections>
                <outlet property="emailField" destination="1A8-II-s7N" id="vvw-gO-kKI"/>
                <outlet property="loginButton" destination="Uh4-R8-bnl" id="WMz-SJ-2tF"/>
                <outlet property="passwordField" destination="eoV-38-zei" id="vY1-Ex-RMZ"/>
                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="iQd-LM-81k">
                    <rect key="frame" x="20" y="336" width="353" height="180"/>
                    <subviews>
                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1A8-II-s7N">
                            <rect key="frame" x="0.0" y="0.0" width="353" height="44"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="44" id="t9B-0A-FEH"/>
                            </constraints>
                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                            <textInputTraits key="textInputTraits" textContentType="email"/>
                            <connections>
                                <action selector="textDidChange:" destination="-1" eventType="editingChanged" id="KLf-Xe-PdF"/>
                            </connections>
                        </textField>
                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eoV-38-zei">
                            <rect key="frame" x="0.0" y="68" width="353" height="44"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="44" id="oq0-bp-E4D"/>
                            </constraints>
                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                            <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                            <connections>
                                <action selector="textDidChange:" destination="-1" eventType="editingChanged" id="YZ9-Km-MkY"/>
                            </connections>
                        </textField>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uh4-R8-bnl">
                            <rect key="frame" x="0.0" y="136" width="353" height="44"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="44" id="ElG-0G-KOE"/>
                            </constraints>
                            <state key="normal" title="Button"/>
                            <buttonConfiguration key="configuration" style="filled" title="Login"/>
                            <connections>
                                <action selector="loginButtonAction:" destination="-1" eventType="touchUpInside" id="as1-6g-uZQ"/>
                            </connections>
                        </button>
                    </subviews>
                    <constraints>
                        <constraint firstAttribute="trailing" secondItem="Uh4-R8-bnl" secondAttribute="trailing" id="1Qw-gN-VtK"/>
                        <constraint firstItem="1A8-II-s7N" firstAttribute="leading" secondItem="iQd-LM-81k" secondAttribute="leading" id="70z-Fw-qQk"/>
                        <constraint firstAttribute="trailing" secondItem="1A8-II-s7N" secondAttribute="trailing" id="HnB-Uz-NOA"/>
                        <constraint firstItem="eoV-38-zei" firstAttribute="leading" secondItem="iQd-LM-81k" secondAttribute="leading" id="Rz8-Gi-taF"/>
                        <constraint firstAttribute="trailing" secondItem="eoV-38-zei" secondAttribute="trailing" id="Zn0-ox-7iw"/>
                        <constraint firstItem="Uh4-R8-bnl" firstAttribute="leading" secondItem="iQd-LM-81k" secondAttribute="leading" id="fDZ-Mx-ucM"/>
                    </constraints>
                </stackView>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L0Y-cK-t3Q">
                    <rect key="frame" x="20.000000000000004" y="89" width="57.333333333333343" height="22"/>
                    <fontDescription key="fontDescription" name="STIXTwoText-Italic_Bold-Italic" family="STIX Two Text" pointSize="22"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
            </subviews>
            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
            <constraints>
                <constraint firstItem="iQd-LM-81k" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="3Sf-xZ-iE5"/>
                <constraint firstItem="iQd-LM-81k" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="CTg-c8-cRC"/>
                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="iQd-LM-81k" secondAttribute="trailing" constant="20" id="EWo-nZ-VN1"/>
                <constraint firstItem="L0Y-cK-t3Q" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="HUK-uA-OmA"/>
                <constraint firstItem="L0Y-cK-t3Q" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="30" id="rG3-cd-rxd"/>
                <constraint firstItem="iQd-LM-81k" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="vMt-xk-eJN"/>
            </constraints>
            <point key="canvasLocation" x="92" y="20"/>
        </view>
    </objects>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
